<resources>
    <string name="app_name">Basit Hesap Makinesi</string>
    <string name="calculator_button_1">1</string>
    <string name="calculator_button_2">2</string>
    <string name="calculator_button_3">3</string>
    <string name="calculator_button_4">4</string>
    <string name="calculator_button_5">5</string>
    <string name="calculator_button_6">6</string>
    <string name="calculator_button_7">7</string>
    <string name="calculator_button_8">8</string>
    <string name="calculator_button_9">9</string>
    <string name="calculator_button_0">0</string>
    <string name="calculator_button_clear">AC</string>
    <string name="calculator_button_delete">DEL</string>
    <string name="calculator_button_exponentiate">xⁿ</string>
    <string name="calculator_button_divide">÷</string>
    <string name="calculator_button_multiply">×</string>
    <string name="calculator_button_subtract">-</string>
    <string name="calculator_button_add">+</string>
    <string name="calculator_button_comma">,</string>
    <string name="calculator_button_equals">=</string>
    <string name="invalid_input">Geçersiz giriş!</string>
</resources>